testsuite/tests/rename/should_fail/T19843a.hs
module T19843a where

import Prelude (map, undefined)

foo (Map k v) = undefined
