testsuite/tests/rename/should_fail/T19843a.stderr

T19843a.hs:5:6: error: [GHC-76037]
    Not in scope: data constructor ‘Map’
